@@ -3551,7 +3551,8 @@ class GeSHi {
         }
 
         // Add HTML whitespace stuff if we're using the <div> header
-        if ($this->header_type != GESHI_HEADER_PRE && $this->header_type != GESHI_HEADER_PRE_VALID) {
+        if ($this->header_type != GESHI_HEADER_PRE && $this->header_type != GESHI_HEADER_PRE_VALID
+              && $this->header_type != GESHI_HEADER_PRE_TABLE) {
             $this->indent($parsed_code);
         }
 
@@ -3572,16 +3573,53 @@ class GeSHi {
 
         // If we're using line numbers, we insert <li>s and appropriate
         // markup to style them (otherwise we don't need to do anything)
-        if ($this->line_numbers != GESHI_NO_LINE_NUMBERS && $this->header_type != GESHI_HEADER_PRE_TABLE) {
+        if ($this->line_numbers != GESHI_NO_LINE_NUMBERS) {
             // If we're using the <pre> header, we shouldn't add newlines because
             // the <pre> will line-break them (and the <li>s already do this for us)
-            $ls = ($this->header_type != GESHI_HEADER_PRE && $this->header_type != GESHI_HEADER_PRE_VALID) ? "\n" : '';
+            if (in_array($this->header_type,
+                  array(GESHI_HEADER_PRE, GESHI_HEADER_PRE_VALID))) {
+                $ls = '';
+            } else {
+                $ls = "\n";
+            }
 
             // Set vars to defaults for following loop
             $i = 0;
 
             // Foreach line...
-            for ($i = 0, $n = count($code); $i < $n;) {
+            $n = count($code);
+            if ($this->header_type == GESHI_HEADER_PRE_TABLE) {
+                if ($this->line_numbers != GESHI_NO_LINE_NUMBERS) {
+                    if ($this->use_classes) {
+                        $attrs = ' class="ln"';
+                    } else {
+                        $attrs = ' style="'. $this->table_linenumber_style .'"';
+                    }
+                    $parsed_code .= '<table><tr><td><table'.$attrs.'>';
+                    // get linenumbers
+                    // we don't merge it with the for below, since it should be better for
+                    // memory consumption this way
+                    for ($i = 0; $i < $n; ++$i) {
+                        if ($this->line_numbers == GESHI_FANCY_LINE_NUMBERS &&
+                            $i % $this->line_nth_row == ($this->line_nth_row - 1)) {
+                            if ($this->use_classes) {
+                                $def_attr = ' class="li2"';
+                            } else {
+                                $def_attr = ' style="' . $this->line_style2 . '"';
+                            }
+                        } else {
+                            if ($this->use_classes) {
+                                $def_attr = ' class="li1"';
+                            } else {
+                                $def_attr = ' style="' . $this->line_style1 . '"';
+                            }
+                        }
+                        $parsed_code .= "<tr$def_attr><td>".($this->line_numbers_start + $i).'</td></tr>';
+                    }
+                    $parsed_code .= '</table></td><td><table>';
+                }
+            }
+            for ($i = 0; $i < $n;) {
                 //Reset the attributes for a new line ...
                 $attrs = array();
 
@@ -3619,16 +3657,6 @@ class GeSHi {
                     }
                 }
 
-                //Check which type of tag to insert for this line
-                if ($this->header_type == GESHI_HEADER_PRE_VALID) {
-                    $start = "<pre$def_attr>";
-                    $end = '</pre>';
-                } else {
-                    // Span or div?
-                    $start = "<div$def_attr>";
-                    $end = '</div>';
-                }
-
                 ++$i;
 
                 // Are we supposed to use ids? If so, add them
@@ -3655,8 +3683,24 @@ class GeSHi {
                     $attr_string .= ' ' . $key . '="' . implode(' ', $attr) . '"';
                 }
 
-                $parsed_code .= "<li$attr_string>$start{$code[$i-1]}$end</li>$ls";
+                //Check which type of tag to insert for this line
+                if ($this->header_type == GESHI_HEADER_PRE_TABLE) {
+                    $start = "<tr$attr_string><td><pre$def_attr>";
+                    $end = '</pre></td></tr>';
+                } elseif ($this->header_type == GESHI_HEADER_PRE_VALID) {
+                    $start = "<li$attr_string><pre$def_attr>";
+                    $end = '</pre></li>';
+                } else {
+                    // Span or div?
+                    $start = "<li$attr_string><div$def_attr>";
+                    $end = '</div></li>';
+                }
+
+                $parsed_code .= "$start{$code[$i-1]}$end$ls";
                 unset($code[$i - 1]);
+            }
+            if ($this->header_type == GESHI_HEADER_PRE_TABLE) {
+                $parsed_code .= '</table></td></tr></table>';
             }
         } else {
             $n = count($code);
@@ -3666,26 +3710,6 @@ class GeSHi {
                 $attributes = ' style="'. $this->code_style .'"';
             }
             if ($this->header_type == GESHI_HEADER_PRE_VALID) {
-                $parsed_code .= '<pre'. $attributes .'>';
-            } elseif ($this->header_type == GESHI_HEADER_PRE_TABLE) {
-                if ($this->line_numbers != GESHI_NO_LINE_NUMBERS) {
-                    if ($this->use_classes) {
-                        $attrs = ' class="ln"';
-                    } else {
-                        $attrs = ' style="'. $this->table_linenumber_style .'"';
-                    }
-                    $parsed_code .= '<td'.$attrs.'><pre>';
-                    // get linenumbers
-                    // we don't merge it with the for below, since it should be better for
-                    // memory consumption this way
-                    for ($i = 0; $i < $n; ++$i) {
-                        $parsed_code .= $this->line_numbers_start + $i;
-                        if ($i != $n) {
-                            $parsed_code .= "\n";
-                        }
-                    }
-                    $parsed_code .= '</pre></td><td>';
-                }
                 $parsed_code .= '<pre'. $attributes .'>';
             }
             // No line numbers, but still need to handle highlighting lines extra.
@@ -3738,11 +3762,8 @@ class GeSHi {
                 unset($code[$i]);
             }
 
-            if ($this->header_type == GESHI_HEADER_PRE_VALID || $this->header_type == GESHI_HEADER_PRE_TABLE) {
+            if ($this->header_type == GESHI_HEADER_PRE_VALID) {
                 $parsed_code .= '</pre>';
-            }
-            if ($this->header_type == GESHI_HEADER_PRE_TABLE && $this->line_numbers != GESHI_NO_LINE_NUMBERS) {
-                $parsed_code .= '</td>';
             }
         }
 
@@ -3794,11 +3815,7 @@ class GeSHi {
             } else {
                 $attr = " style=\"{$this->header_content_style}\"";
             }
-            if ($this->header_type == GESHI_HEADER_PRE_TABLE && $this->line_numbers != GESHI_NO_LINE_NUMBERS) {
-                $header = "<thead><tr><td colspan=\"2\" $attr>$header</td></tr></thead>";
-            } else {
-                $header = "<div$attr>$header</div>";
-            }
+            $header = "<div$attr>$header</div>";
         }
 
         if (GESHI_HEADER_NONE == $this->header_type) {
@@ -3816,7 +3833,7 @@ class GeSHi {
                 $this->header_type == GESHI_HEADER_PRE_VALID) {
                 return "<div$attributes>$header<ol$ol_attributes>";
             } else if ($this->header_type == GESHI_HEADER_PRE_TABLE) {
-                return "<table$attributes>$header<tbody><tr class=\"li1\">";
+                return "<div$attributes>$header";
             }
         } else {
             if ($this->header_type == GESHI_HEADER_PRE) {
@@ -3849,11 +3866,7 @@ class GeSHi {
             } else {
                 $attr = " style=\"{$this->footer_content_style}\"";
             }
-            if ($this->header_type == GESHI_HEADER_PRE_TABLE && $this->linenumbers != GESHI_NO_LINE_NUMBERS) {
-                $footer = "<tfoot><tr><td colspan=\"2\">$footer</td></tr></tfoot>";
-            } else {
-                $footer = "<div$attr>$footer</div>";
-            }
+            $footer = "<div$attr>$footer</div>";
         }
 
         if (GESHI_HEADER_NONE == $this->header_type) {
@@ -3869,7 +3882,7 @@ class GeSHi {
         }
         elseif ($this->header_type == GESHI_HEADER_PRE_TABLE) {
             if ($this->line_numbers != GESHI_NO_LINE_NUMBERS) {
-                return "</tr></tbody>$footer</table>";
+                return "$footer</div>";
             }
             return ($this->force_code_block ? '</div>' : '') .
                 "$footer</div>";
