@@ -16,6 +16,10 @@ Version 1.0.8.1
   -  Fixed broken Escape chars if classes were disabled
   -  start_line_numbers_at() was ignored when GESHI_HEADER_PRE_TABLE was set (revulo)
   -  Fixed a problem allowing Remote Code Inclusion under certain circumstances (BenBE)
+  -  Changed the markup for the (in 1.0.8) new GESHI_HEADER_PRE_TABLE, because on Windows
+     some fonts had different heights when boldened. The new markup with a wrapping table
+     which includes two more tables, one for linenumbers and one for the code, should work
+     even there... (milian)
   -  Improvements to language files (BenBE, milian)
      * Added MinSpareThread\MaxSpareThreads to Apache highlighter (BenBE)
      * Added new Keyword group for APT sources.list highlighter (BenBE)
